<resources>
    <string name="app_name">Habit Breaker</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Record New Outcome</string>
    <string name="record_event">Record Event</string>
    <string name="previous">Previous</string>
    <string name="submit">Submit</string>
    <string name="location">Location</string>
    <string name="time_of_day">Time of Day</string>
    <string name="reasoning_title">Reasoning for Success/Relapse</string>
    <string name="emotion_state_title">Emotional State</string>
    <string name="happy">HAPPY</string>
    <string name="angry">ANGRY</string>
    <string name="sad">SAD</string>
    <string name="disappointed">DISAPPOINTED</string>
    <string name="bored">BORED</string>
    <string name="lonely">LONELY</string>
    <string name="resisted">Resisted</string>
    <string name="relapsed">Relapsed</string>

    Emotional State

    <string name="hello_first_fragment">Graph Data Here</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mistake_text">Whoops!</string>
    <string-array name="time_of_day">
        <item>8:00</item>
        <item>8:30</item>
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>1:00</item>
        <item>1:30</item>
        <item>2:00</item>
        <item>2:30</item>
        <item>3:00</item>
        <item>3:30</item>
        <item>4:00</item>
        <item>4:30</item>
        <item>5:00</item>
        <item>5:30</item>
        <item>6:00</item>
        <item>6:30</item>
        <item>7:00</item>
        <item>7:30</item>
    </string-array>
    <string-array name="am_pm">
        <item>AM</item>
        <item>PM</item>
    </string-array>
</resources>